[package]
name = "mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
smol = "2.0.2"
ctrlc = "3.4.2"
async-h1 = "2.3.4"
http-types = "2.12.0"
async-dup = "=1.2.4"
humantime = "2.1"
regex = "1"
crossbeam-utils = "0.8.20"
bincode = "1.3.3"
serde = "1.0.215"
