[package]
name = "mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
smol = "2.0"
ctrlc = "3.4"
async-h1 = "2.3"
http-types = "2.12"
async-dup = "=1.2"
humantime = "2.1"
regex = "1"
crossbeam-utils = "0.8"
serde = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"